--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "FILEDROPSHARE",
-    "short_name": "FILEDROPSHARE",
+    "name": "Filedropshare",
+    "short_name": "Filedropshare",
     "icons": [
         {
             "src": "/favicon.svg",
