--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "filedrop",
   "version": "1.0.0",
   "main": "service_worker.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  
+"scripts": {
+  "tinacms": "npx tinacms dev"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
